--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -8236,21 +8236,33 @@ body {
 .cid-rspEjb1fTb p {
   color: #767676;
 }
+.cid-rspEjb1fTb .media-container-row {
+  -webkit-flex-direction: row-reverse;
+  flex-direction: row-reverse;
+}
 .cid-rspEjb1fTb .mbr-figure {
   -webkit-flex-shrink: 0;
   flex-shrink: 0;
   -webkit-align-self: flex-start;
   align-self: flex-start;
   padding-right: 4rem;
+  padding-right: 0;
+  padding-left: 4rem;
 }
 .cid-rspEjb1fTb .mbr-text {
   word-break: break-word;
 }
 @media (max-width: 991px) {
+  .cid-rspEjb1fTb .media-container-row {
+    -webkit-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+  }
   .cid-rspEjb1fTb .mbr-figure {
     padding-right: 0;
     padding-left: 0;
     padding-bottom: 2rem;
+    padding-bottom: 0;
+    padding-top: 2rem;
   }
 }
 .cid-rspEjb1fTb P {
