--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1333,6 +1333,103 @@ body {
   padding-bottom: 0px;
   background-color: #ffffff;
 }
+.cid-rFinSnEEYR {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-rFinSnEEYR H2 {
+  color: #ffffff;
+}
+.cid-rFinZV8a84 {
+  padding-top: 45px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rFinZV8a84 .mbr-section-subtitle {
+  color: #000000;
+  font-weight: 300;
+}
+.cid-rFinZV8a84 .number-wrap {
+  color: #4f4943;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-rFinZV8a84 .number {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  text-transform: none;
+  letter-spacing: -2px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #1ea416;
+}
+.cid-rFinZV8a84 .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-rFinZV8a84 .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #1ea416;
+}
+.cid-rFinZV8a84 .countdown-cont {
+  max-width: 700px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rFinZV8a84 .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-rFinZV8a84 .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-rFinZV8a84 .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 25%;
+    flex: 0 0 25%;
+  }
+  .cid-rFinZV8a84 .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-rFinZV8a84 .number,
+  .cid-rFinZV8a84 .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-rFinZV8a84 .period {
+    font-size: 0.8rem;
+  }
+}
 .cid-r6yc14mR1g {
   padding-top: 30px;
   padding-bottom: 0px;
@@ -1468,6 +1565,14 @@ body {
 }
 .cid-rAqInrUz0R .mbr-text DIV {
   text-align: center;
+}
+.cid-rAIwwK8TFI {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-rAIwwK8TFI H2 {
+  color: #ffffff;
 }
 .cid-rjQDCWDhww {
   padding-top: 15px;
@@ -1870,14 +1975,6 @@ body {
 .cid-r6PVvymGe0 .nav-link:hover,
 .cid-r6PVvymGe0 .dropdown-item:hover {
   color: #19ca0f !important;
-}
-.cid-rAIwwK8TFI {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-color: #1ea416;
-}
-.cid-rAIwwK8TFI H2 {
-  color: #ffffff;
 }
 .cid-rAIwLJd1CT {
   padding-top: 45px;
