--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
 @import url(https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i);
 
 
@@ -20,28 +21,28 @@ body {
   line-height: 1.6;
 }
 .display-1 {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 4.25rem;
 }
 .display-1 > .mbr-iconfont {
   font-size: 6.8rem;
 }
 .display-2 {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 2.7rem;
 }
 .display-2 > .mbr-iconfont {
   font-size: 4.32rem;
 }
 .display-4 {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 0.9rem;
 }
 .display-4 > .mbr-iconfont {
   font-size: 1.44rem;
 }
 .display-5 {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 1.55rem;
 }
 .display-5 > .mbr-iconfont {
@@ -1343,7 +1344,7 @@ body {
 }
 .cid-rFinZV8a84 {
   padding-top: 45px;
-  padding-bottom: 90px;
+  padding-bottom: 60px;
   background-color: #ffffff;
 }
 .cid-rFinZV8a84 .mbr-section-subtitle {
@@ -1549,7 +1550,7 @@ body {
 }
 .cid-rAqInrUz0R {
   padding-top: 45px;
-  padding-bottom: 0px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
 .cid-rAqInrUz0R .mbr-text,
@@ -1573,11 +1574,6 @@ body {
 }
 .cid-rAIwwK8TFI H2 {
   color: #ffffff;
-}
-.cid-rjQDCWDhww {
-  padding-top: 15px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
 }
 .cid-r6PVvymGe0 .navbar {
   background: #ffffff;
