--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,5 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
-@import url(https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i);
+@import url(https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900);
 
 
 
@@ -21,35 +20,35 @@ body {
   line-height: 1.6;
 }
 .display-1 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Work Sans', sans-serif;
   font-size: 4.25rem;
 }
 .display-1 > .mbr-iconfont {
   font-size: 6.8rem;
 }
 .display-2 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Work Sans', sans-serif;
   font-size: 2.7rem;
 }
 .display-2 > .mbr-iconfont {
   font-size: 4.32rem;
 }
 .display-4 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Work Sans', sans-serif;
   font-size: 0.9rem;
 }
 .display-4 > .mbr-iconfont {
   font-size: 1.44rem;
 }
 .display-5 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Work Sans', sans-serif;
   font-size: 1.55rem;
 }
 .display-5 > .mbr-iconfont {
   font-size: 2.48rem;
 }
 .display-7 {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Work Sans', sans-serif;
   font-size: 1.1rem;
 }
 .display-7 > .mbr-iconfont {
@@ -642,7 +641,7 @@ a:hover {
   background-color: #f5f5f5;
   box-shadow: none;
   color: #565656;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Work Sans', sans-serif;
   font-size: 1.1rem;
   line-height: 1.43;
   min-height: 3.5em;
