--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1469,6 +1469,134 @@ body {
 .cid-rAqInrUz0R .mbr-text DIV {
   text-align: center;
 }
+.cid-rQh6uGivUc {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-rQh6uGivUc H2 {
+  color: #ffffff;
+}
+.cid-rQh7WzTnSP {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rQh7WzTnSP .mbr-section-subtitle {
+  color: #000000;
+  font-weight: 300;
+}
+.cid-rQh7WzTnSP .number-wrap {
+  color: #000000;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-rQh7WzTnSP .number {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  text-transform: none;
+  letter-spacing: -2px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #1ea416;
+}
+.cid-rQh7WzTnSP .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-rQh7WzTnSP .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #1ea416;
+}
+.cid-rQh7WzTnSP .countdown-cont {
+  max-width: 700px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rQh7WzTnSP .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-rQh7WzTnSP .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-rQh7WzTnSP .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 25%;
+    flex: 0 0 25%;
+  }
+  .cid-rQh7WzTnSP .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-rQh7WzTnSP .number,
+  .cid-rQh7WzTnSP .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-rQh7WzTnSP .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-rQh8Ih3vb5 {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rQh8Ih3vb5 .mbr-text,
+.cid-rQh8Ih3vb5 blockquote {
+  color: #767676;
+}
+.cid-rQh8Ih3vb5 .mbr-text B {
+  color: #000000;
+}
+.cid-rQh8Ih3vb5 .mbr-text {
+  color: #000000;
+  text-align: center;
+}
+.cid-rQh8Ih3vb5 .mbr-text DIV {
+  text-align: center;
+}
+.cid-rQh6s8ek3X {
+  padding-top: 0px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rQh6s8ek3X P {
+  color: #767676;
+}
+.cid-rQh6s8ek3X .mbr-text,
+.cid-rQh6s8ek3X .mbr-section-btn {
+  color: #000000;
+}
 .cid-r6PVvymGe0 .navbar {
   background: #ffffff;
   transition: none;
